--- a/index.html
+++ b/index.html
@@ -274,9 +274,34 @@
     </div>
   </div>
 
+  <script id="template-article-link" type="text/x-handlebars-template">
+    <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+  </script>
 
 
+  <script id="template-tag-link" type="text/x-handlebars-template">
+    <li><a href="#tag-{{ id }}">{{ id }}</li>
+  </script>
 
+
+  <script id="template-author-link" type="text/x-handlebars-template">
+    <a href="#tag-{{ id }}">{{ id }}</a><br>
+  </script>
+
+
+  <script id="template-tagcloud-link" type="text/x-handlebars-template">
+    {{#each tags}}
+      <li><a class="{{ className }}" href="#tag-{{ tag }}">{{ tag }} ({{ count }})</a></li>
+    {{/each}}
+  </script>
+
+  <script id="template-authorcloud-link" type="text/x-handlebars-template">
+    {{#each tags}}
+      <li><a href="#tag-{{ tag }}">{{ tag }} ({{ count }})</a></li>
+    {{/each}}
+  </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
